# SoilMatrix

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: Makefile
docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  usage.rst
docs/source/_static/: custom.css
docs/source/usage/: documentation.rst  getting_started.rst  resources.rst
src/soilmatrix/: __init__.py  soil_matrix.py
src/soilmatrix/utils/: __init__.py  meta_class.py
src/utils/: progress_tracker.py  type_alias.py
