[project]
authors = [{ name = "digital-idiot", email = "mail2abhisek.maiti@gmail.com" }]
name = "SoilMatrix"
requires-python = ">= 3.10"
version = "1.0.beta"
description = "A package downloading data from SoilGrids API."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pixi.dependencies]
numpy = ">=2.2.4,<3"
rasterio = ">=1.4.3,<2"
geopandas = ">=1.0.1,<2"
rich = ">=14.0.0,<15"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = ["runtime", "build", "test", "docs"]

[tool.pixi.environments.build]
features = ["build"]

[tool.pixi.environments.test]
features = ["test"]

[tool.pixi.environments.docs]
features = ["docs"]

[tool.pixi.environments.dev]
features = ["dev"]

[tool.pixi.pypi-dependencies]
soilmatrix = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
numpy = ">=2.2.4,<3"
rasterio = ">=1.4.3,<2"
geopandas = ">=1.0.1,<2"
rich = ">=14.0.0,<15"
pytest = ">=8.3.5,<9"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.2.3,<9"
sphinx_rtd_theme = ">=3.0.1,<4"

[tool.pixi.feature.dev.dependencies]
numpy = ">=2.2.4,<3"
rasterio = ">=1.4.3,<2"
geopandas = ">=1.0.1,<2"
rich = ">=14.0.0,<15"
pixi-pycharm = ">=0.0.8,<0.0.9"
ruff = ">=0.11.5,<0.12"
pytest = ">=8.3.5,<9"
sphinx = ">=8.2.3,<9"
sphinx_rtd_theme = ">=3.0.1,<4"
python-build = ">=1.2.2.post1,<2"

[tool.pixi.feature.build.dependencies]
numpy = ">=2.2.4,<3"
rasterio = ">=1.4.3,<2"
geopandas = ">=1.0.1,<2"
rich = ">=14.0.0,<15"
python-build = ">=1.2.2.post1,<2"

[tool.pixi.feature.runtime.dependencies]
numpy = ">=2.2.4,<3"
rasterio = ">=1.4.3,<2"
geopandas = ">=1.0.1,<2"
rich = ">=14.0.0,<15"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "D203", "D212"]
pydocstyle = { convention = "google" }
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["D", "S101"], "examples/*" = ["D"] }
